--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,32 @@
 
 header {
     display: flex;
+    flex-flow: row wrap;
     justify-content: space-between;
+    background-color: rgb(130, 184, 255);
+    align-items: flex-end;
+}
+
+header img {
+    height: 10em;
+    width: auto;
+    order: -1;
+}
+
+h1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 3em;
+    align-self: center;
+}
+
+#aboutMe {
+    margin: 5%;
+}
+
+h2 {
+    font-size: 2em;
+    margin-bottom: 1%;
+    text-decoration: underline;
 }
 
 ul {
@@ -13,5 +38,65 @@ ul {
 }
 
 li {
-    margin: 3px;
+    margin: 3px 5px 3px 5px;
+    font-size: 1.2rem;
+}
+
+#appBlock {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
+#appBlock figure {
+    padding: 5%;
+    background-color: rgb(130, 184, 255);
+    border: 3px rgb(126, 12, 155) solid;
+    display: flex;
+    justify-content: center;
+    position: relative;
+
+}
+
+figure img {
+    width: 100%;
+    height: 100%;
+}
+
+figcaption {
+    position: absolute;
+    background-color: rgb(245, 214, 112);
+    color: black;
+    font-size: 150%;
+    left: 5%;
+    top: 5%;
+    
+}
+
+#firstApp {
+    width: 80vw;
+    height: auto;
+}
+
+#otherApps {
+    flex: 0 1 40vw;
+}
+
+#contact {
+    background-color: rgb(130, 184, 255);
+    margin-top: 2%;
+    padding: 1%;
+}
+
+h3 {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 1%;
+}
+
+@media screen and (max-width: 768px) {
+    #contact ul {
+        flex-flow: column;
+        text-align: center;
+    }
 }
